2000-01-34  Braden McDaniel <braden@endoframe.com>

        * JavaScript 1.5 beta 1 has been added to the project and incorporated
          into the GNU build, replacing the Arbitrary CVS Snapshot that had been
          in use.

2000-01-19  S. K. Bose <bose@pavan.barc.ernet.in>

        * Incorporated additions in System.cpp to support "http" under windows 
	  and also replaced "System::" with "theSystem->" to support virtual 
          function-call mechanism.
 
2000-01-16  Braden McDaniel <braden@endoframe.com>

        * Submissions from S. K. Bose <bose@pavan.barc.ernet.in>: Added "std::"
          in a number of places where it was needed, as well as conditional
          inclusion of the file "winconfig.h" (which now resides in
          libvrml97core/win32) for the MS Visual C++ Windows build.

2000-01-03  Braden McDaniel <braden@endoframe.com>

        * In lbvrml97core, changed the toString() function in ScriptJS.cpp to
          use the standard, cross-platform means of freeing the buffer required
          by the ostrstream. Squashing #ifdefs gives me warm fuzzies.

1999-12-14  Michael N. Louka <michael.louka@hrp.no>

        * Now tests HAVE_SOUND in Audio::setURL() to check whether to load audio
          files. Previously audio files were (down)loaded even if HAVE_SOUND was
          not true.
          
        * Suppressed "couldn't read AudioClip from URL" error message in
          VrmlNodeAudioClip::update() if HAVE_SOUND is not true.

1999-12-03  Michael N. Louka <michael.louka@hrp.no>

        * Incorporated modifications to support Mac OS 8/9. This was mainly additions
          to System.cpp and Doc.cpp as well as some Macintosh specific header file
          inclusions and other minor modifications to other files.
          
        * Added CodeWarrior projects for Mac OS (in macos directories for lookat and
          libvrml97core).
          
        * Added HAVE_CONFIG_H checks to a number of files that were missing them.
